--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
 		height: 100%;
 		position: absolute;
 		top: 0; left:0;
-		background: url('https://www.dmdc-avocats.com/medias/org-3784/site-6395/img/diapo-infection-min.jpg') center no-repeat;
+		background: url('https://github.com/Gwladys27/Projet-PHP-SQL/blob/main/ImageHtml/infection.jpg') center no-repeat;
 		background-size: cover;
 		opacity: 0.8;
 		font: white;
